[package]
name = "discord_bot_osu"
version = "0.1.0"
authors = ["GreenMine <greenmine94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
